--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -4,4 +4,12 @@
     android:layout_height="fill_parent"
     android:background="@color/background" >
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
 </FrameLayout>
