--- a/res/layout/fragment_welcome.xml
+++ b/res/layout/fragment_welcome.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:orientation="vertical"
-    android:background="@drawable/roundedfragment">
+    android:background="@drawable/roundedfragment"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textViewWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-		android:layout_marginTop="20dp"
-		android:textColor="@color/text"
+        android:paddingTop="10dp"
         android:text="@string/welcome"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text"
         android:textSize="29sp"
         android:textStyle="bold" />
-	
-	<View
-	    android:layout_width="wrap_content"
-        android:layout_height="30dp" />
-    
-    <TextView
-        android:id="@+id/textViewSignInMsg"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_in_msg"
-        android:textColor="@color/text"
-        android:textSize="23sp"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:gravity="center"/>
 
     <View
-	    android:layout_width="wrap_content"
-        android:layout_height="30dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="10dp" />
+
+<!--     <View
+        android:layout_width="300dp"
+        android:layout_height="1dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/roundedbutton" />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="25dp" /> -->
+
+    <TextView
+        android:id="@+id/textViewSignInMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="@string/sign_in_msg"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text"
+        android:textSize="23sp" />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="20dp" />
 
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/buttonSkip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dip"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/skip"
@@ -55,29 +66,24 @@
             android:textSize="26sp"
             android:textStyle="bold" />
 
+        <View
+            android:layout_width="110dp"
+            android:layout_height="5dp" />
+
         <TextView
             android:id="@+id/buttonSignin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="130dip"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/signin"
             android:textColor="@color/text"
             android:textSize="26sp"
             android:textStyle="bold" />
-	</LinearLayout>
+    </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:indeterminateBehavior="cycle"
-        android:visibility="gone" />
-    
     <View
         android:layout_width="wrap_content"
-        android:layout_height="20dp" />
+        android:layout_height="10dp" />
 
 </LinearLayout>
