--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="white">#FFFFFF</color>
     <color name="background">#FFFFFF</color>
     <color name="backgroundfgmt">#FFFFFF</color>
-    <color name="background_offwhite">#E1e1e1</color>    
+    <color name="background_offwhite">#E1e1e1</color>
     <color name="text">#565656</color>
     <color name="button">#936A4A</color>
     <color name="button_gray">#989898</color>
+    <color name="not_played">#EEEEEE</color>
+    <color name="not_played_border">#DFDFDF</color>
+    
+    <color name="nought_play">#A1CB94</color>
+    <color name="nought_palyed">#82CB86</color>
+    <color name="nought_won">#55CB7C</color>
+    
+    <color name="cross_play">#7DDAEA</color>
+    <color name="cross_played">#18C5ED</color>
+    <color name="cross_won">#06B8EF</color>
+
 </resources>
